# SLC

./: .clang-tidy  .gitignore  CMakeLists.txt  J1_abstractclass.tokens  J1_publicclasses.tokens  Makefile.submit  README.md  joosc  version
Docs/: RE.txt
docs/: RE.txt  SemanticsAnalysis.txt  patterns.txt
src/: ASMServices.cpp  ASMServices.hpp  ASMStructuralLib.cpp  ASMStructuralLib.hpp  ASTBuilder.cpp  ASTBuilder.hpp  ASTNode.cpp  ASTNode.hpp  ASTVisitor.cpp  ASTVisitor.hpp  ASTVisitorUtil.cpp  ASTVisitorUtil.hpp  CMakeLists.txt  Client.cpp  Client.hpp  CodeGenDeclaration.cpp  CodeGenDeclaration.hpp  CodeGenLabel.cpp  CodeGenLabel.hpp  CodeGenOffset.cpp  CodeGenOffset.hpp  CodeGenStart.cpp  CodeGenStart.hpp  CodeGenVisitor.cpp  CodeGenVisitor.hpp  Config.hpp.in  EnvFileHeader.cpp  EnvFileHeader.hpp  EnvHierarchy.cpp  EnvHierarchy.hpp  EnvJoosBody.cpp  EnvJoosBody.hpp  EnvJoosContain.cpp  EnvJoosContain.hpp  EnvJoosType.cpp  EnvJoosType.hpp  EnvLocal.cpp  EnvLocal.hpp  EnvLocalVariable.cpp  EnvLocalVariable.hpp  (+56 more)
src/grammar/: joos.cfg  tokens.lex  tokens2.lex
test/: CMakeLists.txt  joosc-test  parser.cpp  testconfig.hpp.in
tests/: ASMStructural.cpp  ASTBuilder.cpp  CMakeLists.txt  Client.cpp  CodeGenLabel.cpp  CodeGenOffset.cpp  EnvFileHeader.cpp  EnvHierarchy.cpp  EnvJoosBody.cpp  EnvJoosContain.cpp  EnvLocal.cpp  EnvLocalVariable.cpp  EnvPackageTree.cpp  EnvScope.cpp  EnvTypeBody.cpp  EnvTypeContain.cpp  EnvTypeLink.cpp  MarmosetConfig.hpp  NameResolver.cpp  ParseDFA.cpp  ParseTree.cpp  Parser.cpp  Scanner.cpp  Scope.cpp  TestConfig.hpp.in  TestUtil.cpp  TestUtil.hpp  TypeChecker.cpp  Weeder.cpp
tests/data/ast/: J1_finalclass.ast  J1_forMethodUpdate.ast
tests/data/grammar/: J1_abstractclass.tokens  J1_publicclasses.token  Je_1_AbstractClass_Final.token  MissingClassBody.token  MissingClassBody.tokens  SimpleReject.token  SimpleReject.tokens  reject.token  sample.tree
tests/data/tokens/: J1_01.tokens  J1_1_AmbiguousName_AccessResultFromMethod.tokens  J1_1_Cast_Complement.tokens  J1_1_Cast_MultipleCastOfSameValue_1.tokens  J1_1_Cast_MultipleCastOfSameValue_2.tokens  J1_1_Cast_MultipleCastOfSameValue_3.tokens  J1_1_Cast_MultipleReferenceArray.tokens  J1_1_Escapes_3DigitOctalAndDigit.tokens  J1_1_Instanceof_InLazyExp.tokens  J1_1_Instanceof_OfAdditiveExpression.tokens  J1_1_Instanceof_OfCastExpression.tokens  J1_1_IntRange_NegativeInt.tokens  J1_ArrayCreateAndIndex.tokens  J1_BigInt.tokens  J1_CharCast.tokens  J1_CharCharInit1.tokens  J1_CharCharInit2.tokens  J1_EscapeEscape.tokens  J1_ForUpdate_ClassCreation.tokens  J1_IntArrayDecl1.tokens  J1_IntArrayDecl2.tokens  J1_IntCast.tokens  J1_IntCharInit.tokens  J1_IntInit.tokens  J1_IntRange_MinNegativeInt.tokens  J1_IsThisACast.tokens  J1_NamedTypeArray.tokens  J1_NegativeByteCast.tokens  J1_NegativeCharCast.tokens  J1_NegativeIntCast1.tokens  J1_NegativeIntCast2.tokens  J1_NegativeOneByteByteCast.tokens  J1_NegativeOneByteCharCast.tokens  J1_NegativeOneByteIntCast.tokens  J1_NegativeOneByteShortCast.tokens  J1_NegativeShortCast.tokens  J1_SimpleTypeArray.tokens  J1_SmallInt.tokens  J1_abstractclass.tokens  J1_abstractmethodwithoutbody.tokens  (+280 more)
tests/data/tokens/a1/: J1_publicclasses.tokens
tests/data/tokens/a2/: J1_classimportMain.tokens  J1_classimportVector.tokens
tools/: CMakeLists.txt  Makefile.joos  Makefile.submit  autotokenize.sh  cfggen.py  generateconst.sh  generatetests.sh  joos.sh  submit.sh  testCodeGen.sh  testEngineCore.sh  tokenizer.py  uglyfy.py
